engram-core/tests/compile_fail/memory_builder_missing_id.stderr
error[E0599]: no method named `embedding` found for struct `MemoryBuilder<engram_core::memory::memory_builder_states::NoId>` in the current scope
  --> tests/compile_fail/memory_builder_missing_id.rs:13:10
   |
12 |       let _memory = MemoryBuilder::new()
   |  ___________________-
13 | |         .embedding([0.1f32; 768])
   | |         -^^^^^^^^^ private field, not a method
   | |_________|
   |
